兼容 jdk8 语法